# lego-spike-non-linear-control

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: Default.yaml  README.md
docs/: ArchitectureOverview.md  FutureControlRoadmap.md  HardwareAssumptions.md  ImplementationReportGuide.md  MotorActuatorLagIdentification.md  NonLinearControllerDesignGuide.md  NonLinearControllerReview.md  PybricksNotes.md  TestStrategy.md
examples/: ClosedLoopSimulation.py  DriveCommandSmoke.py  EstimatorReadout.py  MotorSmokeTest.py  ReadSensors.py
hub/: HubBluetoothTest.py  HubDriveSmoke.py  HubEncoderTest.py  HubImuTest.py  HubMain.py  HubMotorTest.py  HubSingleMotorStepResponseF.py  HubSingleMotorTestF.py
memory/: MEMORY.md  project_tanh_controller.md
scripts/: BootstrapEnv.sh  DeployToHub.md  DetectHub.py  GenerateHubDriveSmokeRuntime.py  PlotClosedLoopBalance.py  PlotHubDriveSmoke.py  PlotHubMainLive.py  PlotHubPackageBalance.py  PlotHubPackageBalanceBuffered.py  PlotHubPackageBalanceLive.py  PlotHubPackageDriveSmoke.py  PlotHubSingleMotorStepResponse.py  RunDiagnostics.py  RunHubPackageBalanceCalibrationSweep.py
src/: HubPackageBalance.py  HubPackageBalanceBuffered.py  HubPackageBalanceCalibrationSweep.py  HubPackageDriveSmoke.py
tests/: test_BalanceState.py  test_ClosedLoopFlow.py  test_ConnectionDiagnostics.py  test_DriveCommandController.py  test_HubDriveSmokeRuntime.py  test_LyapunovController.py  test_NonLinearController.py  test_PidController.py  test_PlotHubSingleMotorStepResponse.py  test_PreBalancingFlow.py  test_RobotConfig.py  test_SafetyMonitor.py  test_Saturation.py  (+2 more)
(+22 files in other folders)
